# pkan_flask

./: .travis.yml  INSTALL.TXT  Pipfile  README.TXT  flask_run.py  pyproject.toml  setup.py
download/: api.py  constants.py  downloader.py  interfaces.py
pkan/: __init__.py
pkan/flask/: constants.py  periodic.py
pkan/flask/configs/: solrconfig.xml
pkan/flask/test_data/: test.txt
pkan_flask/: __init__.py  constants.py  download.py  log.py  periodic.py  routes.py  solr.py
requirements/: dev.txt  prod.txt
src/: main.py
src/pkan/flask/: __init__.py  constants.py  log.py  main.py  namespaces.py  periodic.py  routes.py  routing.py  socket.py  solr.py  sparql_db.py  websocket.py
src/pkan/flask/configs/: config_default.py  solrconfig.xml
src/pkan_flask.egg-info/: PKG-INFO  SOURCES.txt  namespace_packages.txt  requires.txt  top_level.txt
tests/: test_pkan_flask.py
