[tool.poetry]
name = "pkan_flask"
version = "0.1.0"
description = ""
authors = ["sandra <sandra.rum@inqbus.de>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pyrdf4j = { path = "../pyrdf4j", develop = true }
pkan_config = {path="../pkan_config", develop=true}
iso2dcat = {path="../iso2dcat", develop=true}
shacl = {path="../SHACL_validation", develop=true}
Flask = "^2.0.1"
simplejson = "^3.17.5"
Flask-Cors = "^3.0.10"
Flask-Mail = "^0.9.1"
beautifulsoup4 = "^4.10.0"
schedule = "^1.1.0"
colorlog = "^6.5.0"

[tool.poetry.dev-dependencies]
pycodestyle = "^2.8.0"
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
